--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -444,16 +444,16 @@
     <div class="gem-c-summary__block"></div>
 </div>
 <h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
-      <li><a href="http://www.richmondshire.gov.uk" class="govuk-link">Richmondshire District Council</a></li>
-      <li><a href="http://www.west-dunbarton.gov.uk/" class="govuk-link">West Dunbartonshire Council</a></li>
-      <li><a href="https://www.ethnicity-facts-figures.service.gov.uk/crime-justice-and-the-law/policing/stop-and-search/latest" class="govuk-link">Stop and search | Ethnicity facts and figures</a></li>
-      <li><a href="http://www.highpeak.gov.uk" class="govuk-link">High Peak Borough Council</a></li>
-      <li><a href="http://www.bolton.gov.uk" class="govuk-link">Bolton Metropolitan Borough Council</a></li>
-      <li><a href="http://www.calderdale.gov.uk" class="govuk-link">Calderdale Metropolitan Borough Council</a></li>
-      <li><a href="http://www.copelandbc.gov.uk/" class="govuk-link">Copeland Borough Council</a></li>
-      <li><a href="http://www.north-herts.gov.uk" class="govuk-link">North Hertfordshire District Council</a></li>
-      <li><a href="http://findyourmp.parliament.uk/" class="govuk-link">Find your MP - UK Parliament</a></li>
-      <li><a href="http://www.ballymena.gov.uk/" class="govuk-link">Ballymena Borough Council</a></li>
+      <li><a href="http://www.uttlesford.gov.uk" class="govuk-link">Uttlesford District Council</a></li>
+      <li><a href="http://www.eden.gov.uk/" class="govuk-link">Eden District Council</a></li>
+      <li><a href="http://www.flintshire.gov.uk" class="govuk-link">Flintshire County Council</a></li>
+      <li><a href="http://www.justice.gov.uk/courts/procedure-rules/family" class="govuk-link">Family Procedure Rules</a></li>
+      <li><a href="http://www.northwarks.gov.uk" class="govuk-link">North Warwickshire Borough Council</a></li>
+      <li><a href="http://www.bromsgrove.gov.uk" class="govuk-link">Bromsgrove District Council</a></li>
+      <li><a href="http://www.chorley.gov.uk" class="govuk-link">Chorley Borough Council</a></li>
+      <li><a href="http://www.charnwood.gov.uk" class="govuk-link">Charnwood Borough Council</a></li>
+      <li><a href="https://www.nhs.uk/conditions/social-care-and-support-guide/care-services-equipment-and-care-homes/care-homes/" class="govuk-link">Care homes - NHS</a></li>
+      <li><a href="http://www.bristol.gov.uk" class="govuk-link">Bristol City Council</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
