--- a/document-types/external_content.html
+++ b/document-types/external_content.html
@@ -359,16 +359,16 @@ actually any pages with this document type.</p>
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.ukhttp//www.uttlesford.gov.uk">Uttlesford District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.eden.gov.uk/">Eden District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.chorley.gov.uk">Chorley Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.barnet.gov.uk/">London Borough of Barnet Council</a></li>
 <li><a href="https://www.gov.ukhttp//www.charnwood.gov.uk">Charnwood Borough Council</a></li>
-<li><a href="https://www.gov.ukhttps//www.nhs.uk/conditions/social-care-and-support-guide/care-services-equipment-and-care-homes/care-homes/">Care homes - NHS</a></li>
+<li><a href="https://www.gov.ukhttp//www.waverley.gov.uk/">Waverley Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.suffolkcc.gov.uk">Suffolk County Council</a></li>
+<li><a href="https://www.gov.ukhttps//getintoteaching.education.gov.uk/">Get Into Teaching</a></li>
 <li><a href="https://www.gov.ukhttp//www.manchester.gov.uk">Manchester City Council</a></li>
 <li><a href="https://www.gov.ukhttp//www.herefordshire.gov.uk">Herefordshire Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.burnley.gov.uk/">Burnley Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.oadby-wigston.gov.uk">Oadby and Wigston Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.suffolkcc.gov.uk">Suffolk County Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.richmondshire.gov.uk">Richmondshire District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.havant.gov.uk">Havant Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.oxfordshire.gov.uk/">Oxfordshire County Council</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=external_content&amp;count=10">Source query from Search API</a></p>
 
