--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/new-uk-support-for-700000-people-affected-by-2012-floods">New UK support for 700,000 people affected by 2012 floods</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/changes-to-passport-services-for-british-nationals--5">Changes to passport services for British nationals</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/263836.es-419">Reino Unido manifiesta su apoyo a decisión tomada por la Corte de Constitucionalidad</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/294447.pt">Inovações Britânicas na área da saúde na Hospitalar 2015</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/digital-diplomacy">Digital Diplomacy</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/british-expatriates-its-your-vote-dont-lose-it--3">British expatriates - “It’s your vote, don’t lose it”</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/fc-barcelona-v-manchester-city-fc-travel-advice--2">FC Barcelona v Manchester City FC travel advice</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/224623.es-419">Concurso &ldquo;Inauguración Testino&rdquo; en Argentina</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/179566.cs">Reakce na reportáž České televize o odebírání dětí v UK</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/226243.pt">Consulado Britânico promove conferência sobre petróleo e gás</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/229283.es">El Reino Unido ratifica el Tratado sobre el comercio de armas</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/hand-in-hand-with-a-more-dynamic-africa--2">Hand in hand with a more dynamic Africa</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/233503.es">El Consulado de Palma de Mallorca cerrado temporalmente</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/261846.pt">Parques tecnológicos e incubadoras em Florianópolis</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/william-hague-and-angelina-jolie-visit-rwanda">William Hague and Angelina Jolie visit Rwanda</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-chennai--5">Advice for British nationals in Chennai</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/263031.es-419">Términos y condiciones del concurso #MusicIsGREAT</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/272653.es-419">México recuerda el Día Internacional de la Eliminación de la Violencia contra la Mujer</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/foreign-secretary-meets-prime-minister-netanyahu-in-israel">Foreign Secretary meets Prime Minister Netanyahu in Israel</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/201405.it">Insieme in Europa per la sicurezza energetica</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
