--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/important-notice-for-british-nationals-in-chennai--3">Important notice for British nationals in Chennai</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/192676.pt">São Paulo e Rio recebem a maior feira de educação britânica já organizada no país</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/296968.zh-tw">英國簽證網路說明會</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/deputy-consul-general-the-uk-is-a-friend-of-the-people-of-hebron--2">Deputy Consul General: The UK is a friend of the people of Hebron</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-chennai--7">Advice for British nationals in Chennai</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/257525.ar">قام سفير صاحبة الجلالة البريطانية بإلقاء كلمة أمام خادم الحرمين الشريفين الملك عبد الله خلال حفل تقديم أوراق اعتماد السفراء الذي تم عقده في جدة</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-kolkata--9">Advice for British nationals in Kolkata</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/215578.es-419">LSE visitará Quito, Guayaquil y Cuenca en Febrero</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-statement--3">Turks and Caicos post Cabinet Statement</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/new-uk-support-for-700000-people-affected-by-2012-floods">New UK support for 700,000 people affected by 2012 floods</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/changes-to-passport-services-for-british-nationals--5">Changes to passport services for British nationals</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/263836.es-419">Reino Unido manifiesta su apoyo a decisión tomada por la Corte de Constitucionalidad</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/294447.pt">Inovações Britânicas na área da saúde na Hospitalar 2015</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/digital-diplomacy">Digital Diplomacy</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/british-expatriates-its-your-vote-dont-lose-it--3">British expatriates - “It’s your vote, don’t lose it”</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/fc-barcelona-v-manchester-city-fc-travel-advice--2">FC Barcelona v Manchester City FC travel advice</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/224623.es-419">Concurso &ldquo;Inauguración Testino&rdquo; en Argentina</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/179566.cs">Reakce na reportáž České televize o odebírání dětí v UK</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/226243.pt">Consulado Britânico promove conferência sobre petróleo e gás</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
