--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/minister-for-europe-visits-switzerland">Minister for Europe visits Switzerland</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-kolkata--2">Advice for British nationals in Kolkata</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/220268.lt">Pasaulinis susitikimas: seksualinio smurto stabdymas konfliktuose</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/230636.ja">英国外務省の年次人権報告書で日本の死刑制度を解説</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/baroness-warsi-meets-bangladesh-political-leaders-in-dhaka">Baroness Warsi meets Bangladesh political leaders in Dhaka</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/247944.it">L’Italia agli Invictus Games</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/238189.lt">Williamas Hague&#39;as palankiai vertina JT narių įsipareigojimus</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/226373.pt">Declaração dos Líderes do G-7 sobre a Ucrânia</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/falkland-islanders-make-case-for-self-determination-in-honduras">Falkland Islanders make case for self-determination in Honduras</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-meeting-statement--38">Turks and Caicos post-cabinet meeting statement</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/changes-to-passport-services-for-british-nationals--5">Changes to passport services for British nationals</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/257296.pt">Reino Unido em busca de empresários de Uberaba e Uberlândia</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/215578.es-419">LSE visitará Quito, Guayaquil y Cuenca en Febrero</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/important-notice-for-british-nationals-in-chennai--3">Important notice for British nationals in Chennai</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/257525.ar">قام سفير صاحبة الجلالة البريطانية بإلقاء كلمة أمام خادم الحرمين الشريفين الملك عبد الله خلال حفل تقديم أوراق اعتماد السفراء الذي تم عقده في جدة</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-kolkata--9">Advice for British nationals in Kolkata</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/192676.pt">São Paulo e Rio recebem a maior feira de educação britânica já organizada no país</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/296968.zh-tw">英國簽證網路說明會</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/deputy-consul-general-the-uk-is-a-friend-of-the-people-of-hebron--2">Deputy Consul General: The UK is a friend of the people of Hebron</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-chennai--7">Advice for British nationals in Chennai</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
